--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 
 <h1>Welcome Message</h1>
-<p>Hello World</p>
+<p>Welcome to the GitHub lesson. I hope you are enjoying</p>
 
 </body>
 </html>
