Updating the welcome message of the website

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h1>Welcome Message</h1>
+<h1>Welcome Message 2</h1>
 <p>Welcome to the GitHub lesson. I hope you are enjoying</p>
 
 </body>
