--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <h1>Welcome Message GitHub Lesson 4</h1>
 <p>Welcome to the GitHub lesson. I hope you are enjoying</p>
+<p>merge the branch</p>
 
 </body>
 </html>
