new file and changes

--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,7 @@
 <h1>Welcome Message GitHub Lesson 4</h1>
 <p>Welcome to the GitHub lesson. I hope you are enjoying</p>
 <p>merge the branch</p>
-
+<p>I wanted to add a new feature to this file</p>
 
 </body>
 </html>
