--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html>
-<body>
-
-<h1>Welcome Message GitHub Lesson 4</h1>
-<p>Welcome to the GitHub lesson. I hope you are enjoying</p>
-<p>merge the branch</p>
-
-
-</body>
-</html>
+Done
